first component and data

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,1 +1,5 @@
-<p>Meu primeiro componente</p>
+<p>Nome: {{ name }}</p>
+<p>Idade: {{ age }}</p>
+<p>Profissão: {{ job }}</p>
+<p>Hobbie favorito: {{ hobbies[0] }}</p>
+<p>Carro: {{ car.name }} - {{ car.model }}</p>
