--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,4 +1,4 @@
-<p>Nome: {{ name }}</p>
+<h1 class="title">Nome: {{ name }}</h1>
 <p>Idade: {{ age }}</p>
 <p>Profissão: {{ job }}</p>
 <p>Hobbie favorito: {{ hobbies[0] }}</p>
