--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h2>Hello Angular</h2>
 <app-first-component></app-first-component>
 <app-parent-data [userData]="userData"></app-parent-data>
+<app-directives></app-directives>
