if-render component

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,5 +1,7 @@
-<h1 class="title">Nome: {{ name }}</h1>
-<p>Idade: {{ age }}</p>
-<p>Profissão: {{ job }}</p>
-<p>Hobbie favorito: {{ hobbies[0] }}</p>
-<p>Carro: {{ car.name }} - {{ car.model }}</p>
+<div class="class">
+  <h1 class="title">Nome: {{ name }}</h1>
+  <p>Idade: {{ age }}</p>
+  <p>Profissão: {{ job }}</p>
+  <p>Hobbie favorito: {{ hobbies[0] }}</p>
+  <p>Carro: {{ car.name }} - {{ car.model }}</p>
+</div>
