--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,4 +1,6 @@
-<h2>Descrevendo o usuário</h2>
-<h3>Nome: {{ userData.name }}</h3>
-<h3>Idade: {{ userData.age }}</h3>
-<h3>Endereço: {{ userData.address }}</h3>
+<div class="class">
+  <h2>Descrevendo o usuário</h2>
+  <h3>Nome: {{ userData.name }}</h3>
+  <h3>Idade: {{ userData.age }}</h3>
+  <h3>Endereço: {{ userData.address }}</h3>
+</div>
