--- a/src/app/components/directives/directives.component.html
+++ b/src/app/components/directives/directives.component.html
@@ -1,3 +1,5 @@
-<h2 [ngStyle]="{ 'font-size': size + 'px' }">Testando diretivas de estilos / styles</h2>
-<h2 [ngClass]="classes">Testando diretivas de classes</h2>
-<h2 [ngClass]="underline">diretiva de classe de texto sublinhado</h2>
+<div class="class">
+  <h2 [ngStyle]="{ 'font-size': size + 'px' }">Testando diretivas de estilos / styles</h2>
+  <h2 [ngClass]="classes">Testando diretivas de classes</h2>
+  <h2 [ngClass]="underline">diretiva de classe de texto sublinhado</h2>
+</div>
