--- a/src/app/components/emitter/emitter.component.html
+++ b/src/app/components/emitter/emitter.component.html
@@ -1,4 +1,4 @@
 <div class="class">
-  <h1>O número é: </h1>
-  <app-change-number></app-change-number>
+  <h1>O número é: {{ myNumber }}</h1>
+  <app-change-number (changeNumber)="onChangeNumber()"></app-change-number>
 </div>
