--- a/src/app/components/list-render/list-render.component.html
+++ b/src/app/components/list-render/list-render.component.html
@@ -4,6 +4,8 @@
     <li *ngFor="let animal of animals">
       Nome: {{ animal.name }} -
       Tipo: {{ animal.type }}
+      <button (click)="showAge(animal)">Show age</button>
     </li>
   </ul>
+  <h2>{{ animalDetails }}</h2>
 </div>
