--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <h2>Hello Angular</h2>
-<app-first-component></app-first-component>
-<app-parent-data [userData]="userData"></app-parent-data>
-<app-directives></app-directives>
-<app-if-render></app-if-render>
-<app-events></app-events>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
-<app-pipes></app-pipes>
-<app-two-way-binding></app-two-way-binding>
+<nav>
+  <a routerLink="/">Home</a>
+  <a routerLink="/list">List</a>
+</nav>
+<router-outlet></router-outlet>
